# clinical_ETL_code

./: .gitignore  CSVConvert.py  README.md  create_test_mapping.py  generate_mapping_docs.py  generate_schema.py  ingest_redcap_data.py  main.py  mapping_functions.md  mappings.py  mappings.py.md  mcode_template.csv  moh_mappings.py  moh_template.csv  moh_v3_template.csv  mohschema.py  pyproject.toml  quantify_coverage.py  requirements.txt  schema.py  schemas.py  setup.py  test_data_ingest.py  update_moh_template.sh  validate_coverage.py
.github/workflows/: test.yml
candigETL/convert/: CSVConvert.py
candigETL/mapping/: mappings.py
candigETL/schema/: generate_schema.py  mohschema.py
sample_inputs/: manifest.yml  moh_template.csv  new_cohort.py
sample_inputs/generic_example/: manifest.yml  moh_template.csv
sample_inputs/redcap_example/: manifest.yml  redcap2moh.csv  split_redcap_data.py
sample_tests/COMPARISON/: COMPARISON.py  COMPARISON2mCODE.csv  COMPARISON_test_map.json  manifest.yml
sample_tests/sample_data/: COMPARISON_test.xlsx
site_datasets/c3g/: manifest.yml  muhc_mappings.py
site_etl_scripts/c3g/: moh_muhcMelanoma.csv
src/clinical_ETL.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/clinical_etl/: CSVConvert.py  __init__.py  completeness_table.py  generate_mapping_docs.py  generate_schema.py  genomicschema.py  mappings.py  (+6 more)
templates/: mcode_template.csv
test_data/: manifest.yml  moh_diffs.txt  pytest_data_v2.xlsx  test2moh.csv  testmap.py
tests/: manifest.yml  moh_diffs.txt  test2moh.csv  test2mohv3.csv  test_data_ingest.py  testmap.py
(+26 files in other folders)
